@@ -1,9 +1,7 @@
 package com.kkc_lms.service.Subject;
 
 import com.kkc_lms.dto.Subject.SubjectCreateDTO;
-import com.kkc_lms.dto.Subject.SubjectOutputDTO;
-import com.kkc_lms.dto.Subject.SubjectUpdateDTO;
-import com.kkc_lms.dto.Teacher.TeacherOutputDTO;
+import com.kkc_lms.dto.Subject.SubjectDTO;
 import com.kkc_lms.entity.Subject;
 import com.kkc_lms.entity.Teacher;
 import com.kkc_lms.repository.SubjectRepository;
@@ -11,8 +9,9 @@ import com.kkc_lms.repository.TeacherRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -22,67 +21,90 @@ public class SubjectServiceImpl implements SubjectService {
     private final TeacherRepository teacherRepository;
 
     @Override
-    public SubjectOutputDTO create(SubjectCreateDTO dto) {
+    public Subject createSubject(SubjectCreateDTO dto) {
+        if (subjectRepository.existsByNameIgnoreCase(dto.getName())) {
+            throw new IllegalArgumentException("Subject name must be unique");
+        }
         Subject subject = new Subject();
         subject.setName(dto.getName());
         subject.setCredits(dto.getCredits());
 
-        List<Teacher> teachers = teacherRepository.findAllById(dto.getTeacherIds());
+        Set<Teacher> teachers = new HashSet<>(teacherRepository.findAllById(dto.getTeacherIds()));
         subject.setTeachers(teachers);
-        subjectRepository.save(subject);
-        return toDTO(subject);
+        teachers.forEach(teacher -> teacher.getSubjects().add(subject));
+
+        return subjectRepository.save(subject);
     }
 
     @Override
-    public List<SubjectOutputDTO> getAll() {
+    public List<SubjectDTO> getAllSubjects() {
         return subjectRepository.findAll().stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(this::mapToDTO)
+                .toList();
     }
 
     @Override
-    public SubjectOutputDTO getById(Long id) {
-        return subjectRepository.findById(id)
-                .map(this::toDTO)
+    public SubjectDTO getSubjectById(Long id) {
+        Subject subject = subjectRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Subject not found"));
+        return mapToDTO(subject);
     }
 
     @Override
-    public void delete(Long id) {
-        subjectRepository.deleteById(id);
-    }
-    @Override
-    public SubjectOutputDTO update(Long id, SubjectUpdateDTO dto) {
+    public Subject updateSubject(Long id, SubjectCreateDTO dto) {
+        if (subjectRepository.existsByNameIgnoreCaseAndIdNot(dto.getName(), id)) {
+            throw new IllegalArgumentException("Subject name must be unique");
+        }
         Subject subject = subjectRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Subject not found"));
 
         subject.setName(dto.getName());
         subject.setCredits(dto.getCredits());
 
-        List<Teacher> teachers = teacherRepository.findAllById(dto.getTeacherIds());
-        subject.setTeachers(teachers);
+        // Удаляем старые связи ManyToMany с учителями
+        subject.getTeachers().forEach(teacher -> teacher.getSubjects().remove(subject));
+        subject.getTeachers().clear();
 
-        subjectRepository.save(subject);
-        return toDTO(subject);
+        // Добавляем новые связи
+        Set<Teacher> teachers = new HashSet<>(teacherRepository.findAllById(dto.getTeacherIds()));
+        subject.setTeachers(teachers);
+        teachers.forEach(teacher -> teacher.getSubjects().add(subject));
+
+        return subjectRepository.save(subject);
     }
 
+    @Override
+    public void deleteSubject(Long id) {
+        Subject subject = subjectRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Subject not found"));
 
-    private SubjectOutputDTO toDTO(Subject subject) {
-        SubjectOutputDTO dto = new SubjectOutputDTO();
+        // Очищаем связи ManyToMany у учителей
+        subject.getTeachers().forEach(teacher -> teacher.getSubjects().remove(subject));
+        subject.getTeachers().clear();
+
+        subjectRepository.delete(subject);
+    }
+
+    private SubjectDTO mapToDTO(Subject subject) {
+        SubjectDTO dto = new SubjectDTO();
         dto.setId(subject.getId());
         dto.setName(subject.getName());
         dto.setCredits(subject.getCredits());
 
-        List<TeacherOutputDTO> teacherDTOs = subject.getTeachers().stream().map(teacher -> {
-            TeacherOutputDTO t = new TeacherOutputDTO();
-            t.setId(teacher.getId());
-            String fullName = teacher.getUser().getFullname();
-            t.setFullName(fullName);
-            t.setAcademicTitle(teacher.getAcademicTitle());
-            return t;
-        }).collect(Collectors.toList());
+        Set<Teacher> teachers = subject.getTeachers() != null ? subject.getTeachers() : Set.of();
 
-        dto.setTeachers(teacherDTOs);
+        dto.setTeacherIds(
+                teachers.stream()
+                        .map(Teacher::getId)
+                        .toList()
+        );
+
+        dto.setTeacherNames(
+                teachers.stream()
+                        .map(t -> t.getUser().getFullname())
+                        .toList()
+        );
+
         return dto;
     }
 }
